{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 80,
  "lineage": "96dcf7ea-9e19-5d9e-5c36-9438c7e62488",
  "resources": [
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "location": "southeastasia",
            "name": "nsg-hub",
            "resource_group_name": "sharedsvc-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSQLServer",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1050,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "",
              "source": ""
            }
          }
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "nsg-hub",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "sharedsvc-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPS",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "nsg-hub",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "sharedsvc-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowRDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "nsg-hub",
            "priority": 1050,
            "protocol": "Tcp",
            "resource_group_name": "sharedsvc-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLServer",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub/securityRules/AllowSQLServer",
            "name": "AllowSQLServer",
            "network_security_group_name": "nsg-hub",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "sharedsvc-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "nsg-hub",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "sharedsvc-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpngwpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.215.191.224",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "hub-vpn-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "sharedsvc-rg",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "sharedsvc-rg",
            "virtual_network_name": "hub-vnet"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "ip_configurations": [
              "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gw/ipConfigurations/vnetGatewayConfig"
            ],
            "name": "GatewaySubnet",
            "resource_group_name": "sharedsvc-rg",
            "virtual_network_name": "hub-vnet"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ext-dmz",
            "name": "ext-dmz",
            "resource_group_name": "sharedsvc-rg",
            "virtual_network_name": "hub-vnet"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/int-dmz",
            "name": "int-dmz",
            "resource_group_name": "sharedsvc-rg",
            "virtual_network_name": "hub-vnet"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.4.0/24",
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/shared-svc",
            "name": "shared-svc",
            "resource_group_name": "sharedsvc-rg",
            "virtual_network_name": "hub-vnet"
          },
          "depends_on": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_web",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ext-dmz",
            "network_security_group_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "subnet_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ext-dmz"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "southeastasia",
            "name": "hub-vnet",
            "resource_group_name": "sharedsvc-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/ext-dmz",
                "name": "ext-dmz",
                "security_group": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/int-dmz",
                "name": "int-dmz"
              },
              {
                "address_prefix": "10.1.4.0/24",
                "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/shared-svc",
                "name": "shared-svc"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpngw",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpngw",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.1.0.254"
              }
            ],
            "enable_bgp": false,
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gw",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-pip",
                "subnet_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "southeastasia",
            "name": "hub-vpn-gw",
            "resource_group_name": "sharedsvc-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "depends_on": [
            "azurerm_public_ip.vpngwpip"
          ]
        }
      ]
    },
    {
      "module": "module.vpngw",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "vpn_gw_conn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/connections/vpn-local",
            "ipsec_policy": [
              {
                "dh_group": "DHGroup14",
                "ike_encryption": "AES256",
                "ike_integrity": "SHA256",
                "ipsec_encryption": "AES256",
                "ipsec_integrity": "SHA256",
                "pfs_group": "PFS1",
                "sa_datasize": 102400000,
                "sa_lifetime": 14400
              }
            ],
            "local_network_gateway_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/localNetworkGateways/hub-vpn-localgw",
            "location": "southeastasia",
            "name": "vpn-local",
            "resource_group_name": "sharedsvc-rg",
            "routing_weight": 0,
            "shared_key": "aabbccddee",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/ec1db060-76cb-4db3-8256-76de956aaa77/resourceGroups/sharedsvc-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gw"
          },
          "depends_on": [
            "azurerm_local_network_gateway.onpremise",
            "azurerm_virtual_network_gateway.vpngw"
          ]
        }
      ]
    }
  ]
}